--- a/.github/workflows/daily-deployment.yml
+++ b/.github/workflows/daily-deployment.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r .github/workflows/requirements.txt
+          pip install -r .requirements.txt
 
       - name: Execute program
         run: python javenbot.py
