--- a/.github/workflows/daily-lunch-reminder.yml
+++ b/.github/workflows/daily-lunch-reminder.yml
@@ -2,7 +2,7 @@ name: Daily Lunch Reminder
 
 on:
   schedule:
-    - cron: '31 22 * * *'
+    - cron: '35 22 * * *'
 
 jobs:
   reminder:
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r .github/workflows/daily-lunch-reminder.yml/requirements.txt
 
       - name: Run lunch reminder script
         run: |
