--- a/.github/workflows/daily-lunch-reminder.yml
+++ b/.github/workflows/daily-lunch-reminder.yml
@@ -1,8 +1,10 @@
 name: Daily Lunch Reminder
 
 on:
-  schedule:
-    - cron: '35 22 * * *'
+ workflow_dispatch
+ # schedule:
+   # - cron: '35 22 * * *'
+    
 
 jobs:
   reminder:
