--- a/.github/workflows/daily-lunch-reminder.yml
+++ b/.github/workflows/daily-lunch-reminder.yml
@@ -1,23 +1,16 @@
 name: Daily Lunch Reminder
 
 on:
- workflow_dispatch
- # schedule:
-   # - cron: '35 22 * * *'
-    
+  schedule:
+    - cron: '40 23 * * *'
 
 jobs:
   reminder:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
-      - name: Set up Node.js 16
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
 
       - name: Set up Python
         uses: actions/setup-python@v2
